overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  overflow: hidden !important;
+}
 
 body {
   margin: 0;
